[MyNT]:topic practice

--- a/nguyen-thi-my/index.html
+++ b/nguyen-thi-my/index.html
@@ -77,49 +77,49 @@
 
                             </span>
                         <div class="row pt-4 py-2">
-                            <div class="col-xl-2 col-md-12 ">
+                            <div class=" col-xl-3 col-md-12 col-sm-12 ">
                                 <p>Sinh ngày : </p>
                             </div>
-                            <div class="col-xl-10 col-md-12">
+                            <div class="col-xl-9 col-md-12 col-sm-12 ">
                                 <p class="font-bold ">23/09/2001 </p>
                             </div>
                         </div>
                         <div class="row py-2">
-                            <div class="col-xl-2 col-md-12">
+                            <div class="col-xl-3 col-md-12 col-sm-12 ">
                                 <p>Giới tính :</p>
                             </div>
-                            <div class="col-xl-10 col-md-12">
+                            <div class="col-xl-9 col-md-12 col-sm-12 ">
                                 <p class="font-bold ">Nữ</p>
                             </div>
                         </div>
                         <div class="row py-2">
-                            <div class="col-xl-2 col-md-12">
+                            <div class="col-xl-3 col-md-12 col-sm-12">
                                 <p>Email : </p>
                             </div>
-                            <div class="col-xl-10 col-md-12">
+                            <div class="col-xl-9 col-md-12 col-sm-12 ">
                                 <p class="font-bold ">mybg2309@gmail.com</p>
                             </div>
 
                         </div>
                         <div class="row py-2">
-                            <div class="col-xl-2 col-md-12">
+                            <div class="col-xl-3 col-md-12">
                                 <p>Địa chỉ : </p>
                             </div>
-                            <div class="col-xl-10 col-md-12">
+                            <div class="col-xl-9 col-md-12">
                                 <p class="font-bold ">Nguyễn Cơ Thạch - Nam Từ Niêm - Hà Nội</p>
                             </div>
                         </div>
                         <div class="row py-2">
-                            <div class="col-xl-2 col-md-12">
+                            <div class="col-xl-3 col-md-12 col-sm-12 ">
                                 <p>Học vấn : </p>
                             </div>
-                            <div class="col-xl-10 col-md-12">
+                            <div class="col-xl-9 col-md-12 col-sm-12">
                                 <p class="font-bold ">Trường Cao Đẳng thực hàng FPT Polytechnic</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-6 col-md-12 col-sm-12 text-center py-8">
-                        <img src="./img/client1.jpg" alt="">
+                        <img src="./img/client1.jpg" width="100%" alt="">
                     </div>
                 </div>
             </div>
@@ -131,13 +131,15 @@
                     <img src="./img/marker.png" width="150px" alt="">
                 </div>
                 <div class="row py-8">
-                    <div class="col-xl-6 ">
+                    <div class="col-xl-6 col-md-12 col-sm-12">
                         <div class="title-project flex justify-around">
                             <div class="py-4">
                                 <h6>Xây dựng website bán hoa</h6>
                                 <p> 10/2020 - 12/2020</p>
                             </div>
-                            <img src="./img/web-design.png" width="60px" alt="">
+                            <div class="project-content">
+                                <img src="./img/web-design.png" width="80x" alt="">
+                            </div>
                         </div>
                         <div class="py-4">
                             <p>- Vai trò : Design giao diên, xây dựng các chức năng cho người dùng và thực hiện kiểm thử </p>
@@ -148,13 +150,15 @@
 
                         </div>
                     </div>
-                    <div class="col-xl-6 ">
+                    <div class="col-xl-6 col-md-12 col-sm-12">
                         <div class="title-project flex justify-around">
                             <div class="py-4">
                                 <h6>Xây dựng website bán Quần áo</h6>
                                 <p> 01/2021 - 03/2021</p>
                             </div>
-                            <img src="./img/web-design.png" width="60px" alt="">
+                            <div class="project-content">
+                                <img src="./img/web-design.png" width="80px" alt="">
+                            </div>
                         </div>
                         <div class="py-4">
                             <p>- Vị trí : Trưởng nhóm</p>
@@ -179,7 +183,7 @@
                 <div class="skill-content">
                     <div class="container">
                         <div class="row">
-                            <div class="col-xl-6 col-lg-12 col-sm-12 px-4">
+                            <div class="col-xl-6 col-md-12 col-sm-12 px-4">
                                 <div class="flex justify-between ">
                                     <p> HTML5/CSS3</p>
                                     <p>60%</p>
@@ -205,7 +209,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-6 col-lg-12 col-sm-12 px-4">
+                            <div class="col-xl-6 col-md-12 col-sm-12 px-4">
                                 <div class="flex justify-between ">
                                     <p> ES6</p>
                                     <p>30%</p>
@@ -254,10 +258,10 @@
                         <img src="./img/marker.png" width="150px" alt="">
                     </div>
                     <div class="row  py-8">
-                        <div class="col-xl-6 col-lg-12 col-sm-12 px-8 text-center">
+                        <div class="col-xl-6 col-md-12 col-sm-12 px-8 text-center">
                             <img src="./img/client2.jpg" width="60%" alt="">
                         </div>
-                        <div class="col-xl-6 col-lg-12 col-sm-12 py-8  text-center text-xl-left ">
+                        <div class="col-xl-6 col-md-12 col-sm-12 py-8  text-center text-xl-left ">
                             <div class="row pt-4 py-2 ">
                                 <div class="col-xl-2 col-md-12 ">
                                     <p>Thầy : </p>
