[MyNT]:topic practice

--- a/nguyen-thi-my/index.html
+++ b/nguyen-thi-my/index.html
@@ -35,11 +35,12 @@
             <input type="checkbox" hidden id="true">
             <label for="true" id="false"><i class="fas fa-bars fa-2x"></i></label>
             <ul class="absolute col-md-12 col-sm-12">
-                <li><a href="">Thông tin cá nhân</a></li>
-                <li><a href="">Dự án</a></li>
-                <li><a href="">Kỹ năng chuyên môn</a></li>
-                <li><a href="">Giải thưởng</a></li>
-                <li><a href="">Người tham chiếu </a></li>
+                <li><a href="#personal-information">Thông tin cá nhân</a></li>
+                <li><a href="#project">Dự án</a></li>
+                <li><a href="#skills">Kỹ năng chuyên môn</a></li>
+                <li><a href="#certificate">Giải thưởng</a></li>
+                <li><a href="#reference-person">Người tham chiếu </a></li>
+
 
             </ul>
         </div>
