[MyNT]:topic practice

--- a/nguyen-thi-my/index.html
+++ b/nguyen-thi-my/index.html
@@ -66,8 +66,8 @@
         <section id="personal-information">
             <div class="container ">
                 <div class="row">
-                    <div class="col-xl-6 col-md-12 col-sm-12 py-8">
-                        <h3 class="py-4  text-center">Xin chào! Tôi là Nguyễn Thị Mỹ.</h3>
+                    <div class="personal-information col-xl-6 col-md-12 col-sm-12">
+                        <h3 class="py-4 text-center">Xin chào! Tôi là Nguyễn Thị Mỹ.</h3>
                         <span class=" text-center">
                                 - Trong 3 năm tới muốn học hỏi, khám phá được nhiều
                                 công nghệ mới để áp dụng vào những dự án của công ty -
@@ -78,7 +78,7 @@
 
                             </span>
                         <div class="row pt-4 py-2">
-                            <div class=" col-xl-3 col-md-12 col-sm-12 ">
+                            <div class="col-xl-3 col-md-12 col-sm-12 ">
                                 <p>Sinh ngày : </p>
                             </div>
                             <div class="col-xl-9 col-md-12 col-sm-12 ">
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-md-12 col-sm-12 text-center py-8">
+                    <div class="personal-information-image col-xl-6 col-md-12 col-sm-12 text-center">
                         <img src="./img/client1.jpg" width="100%" alt="">
                     </div>
                 </div>
