[MyNT]:topic practice

--- a/nguyen-thi-my/index.html
+++ b/nguyen-thi-my/index.html
@@ -59,24 +59,28 @@
                     <a href="" class="btn "> Thông tin <i class="fas fa-arrow-right fa-1x px-4"></i></a>
                 </div>
             </div>
+            <div class="bubbles">
+                <img src="./img/bubble.png" alt="">
+                <img src="./img/bubble.png" alt="">
+                <img src="./img/bubble.png" alt="">
+                <img src="./img/bubble.png" alt="">
+                <img src="./img/bubble.png" alt="">
+                <img src="./img/bubble.png" alt="">
+            </div>
         </div>
-        <aside>
+        <aside class="wave-bg">
             <img src="./img/wave-bg.png" width="100%" alt="">
         </aside>
         <section id="personal-information">
             <div class="container ">
                 <div class="row">
-                    <div class="personal-information col-xl-6 col-md-12 col-sm-12">
-                        <h3 class="py-4 text-center">Xin chào! Tôi là Nguyễn Thị Mỹ.</h3>
-                        <span class=" text-center">
-                                - Trong 3 năm tới muốn học hỏi, khám phá được nhiều
-                                công nghệ mới để áp dụng vào những dự án của công ty -
-                                Tôi tin cùng sự đam mê và nỗ lực trong công việc, không
-                                ngừng học hỏi, tôi sẽ hoàn thành tốt công việc khi được
-                                trúng tuyển. LÀM VIỆC- CỐNG HIẾN- TẬN TÂM LÀ NHỮNG
-                                TIÊU CHÍ HÀNG ĐẦU CỦA TÔI.
+                    <div class="personal-information col-xl-6 col-md-12 col-sm-12 ">
+                        <h3 class="py-8 text-center">Xin chào! Tôi là Nguyễn Thị Mỹ.</h3>
+                        <div class="pl-4">
+                            - Trong 3 năm tới muốn học hỏi, khám phá được nhiều công nghệ mới để áp dụng vào những dự án của công ty - Tôi tin cùng sự đam mê và nỗ lực trong công việc, không ngừng học hỏi, tôi sẽ hoàn thành tốt công việc khi được trúng tuyển. LÀM VIỆC- CỐNG HIẾN-
+                            TẬN TÂM LÀ NHỮNG TIÊU CHÍ HÀNG ĐẦU CỦA TÔI.
 
-                            </span>
+                        </div>
                         <div class="row pt-4 py-2">
                             <div class="col-xl-3 col-md-12 col-sm-12 ">
                                 <p>Sinh ngày : </p>
@@ -103,10 +107,10 @@
 
                         </div>
                         <div class="row py-2">
-                            <div class="col-xl-3 col-md-12">
+                            <div class="col-xl-3 col-md-12 col-sm-12 ">
                                 <p>Địa chỉ : </p>
                             </div>
-                            <div class="col-xl-9 col-md-12">
+                            <div class="col-xl-9 col-md-12 col-sm-12">
                                 <p class="font-bold ">Nguyễn Cơ Thạch - Nam Từ Niêm - Hà Nội</p>
                             </div>
                         </div>
@@ -120,7 +124,15 @@
                         </div>
                     </div>
                     <div class="personal-information-image col-xl-6 col-md-12 col-sm-12 text-center">
-                        <img src="./img/client1.jpg" width="100%" alt="">
+                        <div class="card-personal">
+                            <img src="./img/client1.jpg" width="100%" alt="">
+                            <div class="detail-person">
+                                <p>Họ tên : Nguyễn Thị Mỹ </p>
+                                <p>20 tuổi </p>
+                                <p>Giới tính : Nữ </p>
+                                <p>Học vấn : Sinh viên Cao Đằng FPT</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
