[MyNT]:topic practice

--- a/nguyen-thi-my/index.html
+++ b/nguyen-thi-my/index.html
@@ -74,58 +74,57 @@
         <section id="personal-information">
             <div class="container ">
                 <div class="row">
-                    <div class="personal-information col-xl-6 col-md-12 col-sm-12 ">
+                    <div class="personal-information col-12 col-xl-6 col-md-12 col-sm-12 p-sm-0 ">
                         <h3 class="py-8 text-center">Xin chào! Tôi là Nguyễn Thị Mỹ.</h3>
                         <div class="pl-4">
                             - Trong 3 năm tới muốn học hỏi, khám phá được nhiều công nghệ mới để áp dụng vào những dự án của công ty - Tôi tin cùng sự đam mê và nỗ lực trong công việc, không ngừng học hỏi, tôi sẽ hoàn thành tốt công việc khi được trúng tuyển. LÀM VIỆC- CỐNG HIẾN-
                             TẬN TÂM LÀ NHỮNG TIÊU CHÍ HÀNG ĐẦU CỦA TÔI.
 
                         </div>
-                        <div class="row pt-4 py-2">
-                            <div class="col-xl-3 col-md-12 col-sm-12 ">
+                        <div class="row pt-4">
+                            <div class="col-12 col-xl-3 col-md-12 col-sm-12 ">
                                 <p>Sinh ngày : </p>
                             </div>
-                            <div class="col-xl-9 col-md-12 col-sm-12 ">
+                            <div class="col-12 col-xl-9 col-md-12 col-sm-12 py-4 ">
                                 <p class="font-bold ">23/09/2001 </p>
                             </div>
                         </div>
                         <div class="row py-2">
-                            <div class="col-xl-3 col-md-12 col-sm-12 ">
+                            <div class="col-12 col-xl-3 col-md-12 col-sm-12 ">
                                 <p>Giới tính :</p>
                             </div>
-                            <div class="col-xl-9 col-md-12 col-sm-12 ">
+                            <div class=" col-12 col-xl-9 col-md-12 col-sm-12 py-4  ">
                                 <p class="font-bold ">Nữ</p>
                             </div>
                         </div>
                         <div class="row py-2">
-                            <div class="col-xl-3 col-md-12 col-sm-12">
+                            <div class="col-12 col-xl-3 col-md-12 col-sm-12">
                                 <p>Email : </p>
                             </div>
-                            <div class="col-xl-9 col-md-12 col-sm-12 ">
+                            <div class="col-12 col-xl-9 col-md-12 col-sm-12 py-4  ">
                                 <p class="font-bold ">mybg2309@gmail.com</p>
                             </div>
-
                         </div>
                         <div class="row py-2">
-                            <div class="col-xl-3 col-md-12 col-sm-12 ">
+                            <div class="col-12 col-xl-3 col-md-12 col-sm-12 ">
                                 <p>Địa chỉ : </p>
                             </div>
-                            <div class="col-xl-9 col-md-12 col-sm-12">
+                            <div class="col-12 col-xl-9 col-md-12 col-sm-12 py-4 ">
                                 <p class="font-bold ">Nguyễn Cơ Thạch - Nam Từ Niêm - Hà Nội</p>
                             </div>
                         </div>
                         <div class="row py-2">
-                            <div class="col-xl-3 col-md-12 col-sm-12 ">
+                            <div class="col-12 col-xl-3 col-md-12 col-sm-12 ">
                                 <p>Học vấn : </p>
                             </div>
-                            <div class="col-xl-9 col-md-12 col-sm-12">
+                            <div class=" col-12 col-xl-9 col-md-12 col-sm-12 py-4 ">
                                 <p class="font-bold ">Trường Cao Đẳng thực hàng FPT Polytechnic</p>
                             </div>
                         </div>
                     </div>
-                    <div class="personal-information-image col-xl-6 col-md-12 col-sm-12 text-center">
+                    <div class="personal-information-image col-12 col-xl-6 col-md-12 col-sm-12 text-center py-8">
                         <div class="card-personal">
-                            <img src="./img/client1.jpg" width="100%" alt="">
+                            <img src="./img/IMG_6070.JPG" width="100%" alt="">
                             <div class="detail-person">
                                 <p>Họ tên : Nguyễn Thị Mỹ </p>
                                 <p>20 tuổi </p>
@@ -137,7 +136,7 @@
                 </div>
             </div>
         </section>
-        <section class="py-8" id="project">
+        <section class="my-8" id="project">
             <div class="container">
                 <div class="title text-center">
                     <h3>Dự án </h3>
@@ -187,7 +186,7 @@
             </div>
         </section>
         <section class="skills" id="skills">
-            <div class="container">
+            <div class="container ">
                 <div class="skills-title text-center">
                     <h3>Kỹ năng chuyên môn</h3>
                     <img src="./img/marker.png" width="150px" alt="">
@@ -196,7 +195,7 @@
                 <div class="skill-content">
                     <div class="container">
                         <div class="row">
-                            <div class="col-xl-6 col-md-12 col-sm-12 px-4">
+                            <div class="col-12 col-xl-6 col-md-12 col-sm-12 px-4">
                                 <div class="flex justify-between ">
                                     <p> HTML5/CSS3</p>
                                     <p>60%</p>
@@ -222,7 +221,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-6 col-md-12 col-sm-12 px-4">
+                            <div class="col-12 col-xl-6 col-md-12 col-sm-12 px-4">
                                 <div class="flex justify-between ">
                                     <p> ES6</p>
                                     <p>30%</p>
@@ -255,7 +254,7 @@
         </section>
         <section class="py-8" id="certificate">
             <div class="container text-center">
-                <div class="certificate text-center py-8 ">
+                <div class="certificate text-center py-8 box-shadow  ">
                     <h3>Giải thưởng</h3>
                     <img src="./img/marker.png" width="150px" alt="">
                     <p class="py-8"> 2020 : Sinh viên giỏi kỳ 4 </p>
@@ -263,51 +262,80 @@
 
             </div>
         </section>
-        <section id="reference-person">
-            <div class="container">
-                <div class="reference-person">
-                    <div class=" text-center py-8 ">
-                        <h3>Người tham chiếu </h3>
-                        <img src="./img/marker.png" width="150px" alt="">
-                    </div>
-                    <div class="row  py-8">
-                        <div class="col-xl-6 col-md-12 col-sm-12 px-8 text-center">
-                            <img src="./img/client2.jpg" width="60%" alt="">
-                        </div>
-                        <div class="col-xl-6 col-md-12 col-sm-12 py-8  text-center text-xl-left ">
-                            <div class="row pt-4 py-2 ">
-                                <div class="col-xl-2 col-md-12 ">
-                                    <p>Thầy : </p>
+        <section class="my-8">
+            <div class="contact-me ">
+                <div class="text-center pb-8">
+                    <h3>Liên hệ với tôi </h3>
+                    <img src="./img/marker.png" width="150px" alt="">
+                </div>
+                <div class="container py-8">
+                    <div class="row">
+                        <div class="col-12 col-xl-6 col-md-12 col-sm-12">
+                            <form class="form-contact">
+                                <div class="form-control">
+                                    <label for="">Name</label>
+                                    <br>
+                                    <input type="text">
                                 </div>
-                                <div class="col-xl-10 col-md-12">
-                                    <p class="font-bold ">Lê Trọng Đạt</p>
+                                <div class="form-control">
+                                    <label for="">Email</label>
+                                    <br>
+                                    <input type="text">
                                 </div>
-                            </div>
-                            <div class="row py-2 ">
-                                <div class="col-xl-2 col-md-12">
-                                    <p>Vị trí :</p>
+                                <div class="form-control">
+                                    <label for="">Message</label>
+                                    <br>
+                                    <input type="text">
                                 </div>
-                                <div class="col-xl-10 col-md-12">
-                                    <p class="font-bold ">Bô môn CNTT</p>
-                                </div>
-                            </div>
-                            <div class="row py-2 ">
-                                <div class="col-xl-2 col-md-12">
-                                    <p>Đơn vị : </p>
-                                </div>
-                                <div class="col-xl-10 col-md-12">
-                                    <p class="font-bold ">Trường Cao Đẳng FPT Poly</p>
-                                </div>
+                                <a href="" class="btn">Send </a>
+                            </form>
 
+                        </div>
+                        <div class="col-12 col-xl-6 col-md-12 col-sm-12 pt-8">
+                            <div class="contact-content">
+                                <h6>Hãy nói về cách tôi có thể giúp bạn!</h6>
+                                <p class="py-4">Nếu bạn thích công việc của tôi và muốn tận dụng các dịch vụ của tôi thì hãy gửi tin nhắn cho tôi bằng cách sử dụng biểu mẫu liên hệ.</p>
+                                <p>Hoặc liên hệ bằng cách sử dụng email, skype hoặc số liên lạc của tôi.</p>
+                                <p class="py-4">See you !</p>
+                                <div class="row py-2">
+                                    <div class="col-12 col-xl-3 col-md-12 col-sm-12 ">
+                                        <p>Email : </p>
+                                    </div>
+                                    <div class="col-12 col-xl-9 col-md-12 col-sm-12 py-4 ">
+                                        <p class="font-bold ">mybg2309@gmail.com</p>
+                                    </div>
+                                </div>
+                                <div class="row py-2">
+                                    <div class="col-12 col-xl-3 col-md-12 col-sm-12">
+                                        <p>Skype : </p>
+                                    </div>
+                                    <div class="col-12 col-xl-9 col-md-12 col-sm-12 py-4">
+                                        <p class="font-bold ">live:.cid.1d9ab1de8871c2a7</p>
+                                    </div>
+                                </div>
+                                <div class="row py-2">
+                                    <div class="col-12 col-xl-3 col-md-12 col-sm-12">
+                                        <p>SĐT : </p>
+                                    </div>
+                                    <div class="col-12 col-xl-9 col-md-12 col-sm-12 py-4">
+                                        <p class="font-bold ">0373415145</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
-
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer text-center">
+            <h6 class="py-4">Nguyễn Thị Mỹ </h6>
+            <p class="py-4">TTS Front-end</p>
+            <p>© Super Folio.Đã đăng ký Bản quyền.</p>
+            <p class="py-4">Thiết kế - TemplateFlip</p>
+        </div>
+    </footer>
 </body>
 
 </html>
