--- a/nguyen-thi-my/index.html
+++ b/nguyen-thi-my/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#project">Dự án</a></li>
                 <li><a href="#skills">Kỹ năng chuyên môn</a></li>
                 <li><a href="#certificate">Giải thưởng</a></li>
-                <li><a href="#reference-person">Người tham chiếu </a></li>
+                <li><a href="#contact">Liên hệ</a></li>
 
             </ul>
         </div>
@@ -39,7 +39,7 @@
                 <li><a href="#project">Dự án</a></li>
                 <li><a href="#skills">Kỹ năng chuyên môn</a></li>
                 <li><a href="#certificate">Giải thưởng</a></li>
-                <li><a href="#reference-person">Người tham chiếu </a></li>
+                <li><a href="#contact">Liên hệ</a></li>
 
 
             </ul>
@@ -74,7 +74,7 @@
         <section id="personal-information">
             <div class="container ">
                 <div class="row">
-                    <div class="personal-information col-12 col-xl-6 col-md-12 col-sm-12 p-sm-0 ">
+                    <div class="personal-information col-12 col-xl-6 col-md-12 col-sm-12 ">
                         <h3 class="py-8 text-center">Xin chào! Tôi là Nguyễn Thị Mỹ.</h3>
                         <div class="pl-4">
                             - Trong 3 năm tới muốn học hỏi, khám phá được nhiều công nghệ mới để áp dụng vào những dự án của công ty - Tôi tin cùng sự đam mê và nỗ lực trong công việc, không ngừng học hỏi, tôi sẽ hoàn thành tốt công việc khi được trúng tuyển. LÀM VIỆC- CỐNG HIẾN-
@@ -82,10 +82,10 @@
 
                         </div>
                         <div class="row pt-4">
-                            <div class="col-12 col-xl-3 col-md-12 col-sm-12 ">
+                            <div class="col-12 col-xl-3 col-md-12 col-sm-12 pt-sm-2  ">
                                 <p>Sinh ngày : </p>
                             </div>
-                            <div class="col-12 col-xl-9 col-md-12 col-sm-12 py-4 ">
+                            <div class="col-12 col-xl-9 col-md-12 col-sm-12 ">
                                 <p class="font-bold ">23/09/2001 </p>
                             </div>
                         </div>
@@ -93,7 +93,7 @@
                             <div class="col-12 col-xl-3 col-md-12 col-sm-12 ">
                                 <p>Giới tính :</p>
                             </div>
-                            <div class=" col-12 col-xl-9 col-md-12 col-sm-12 py-4  ">
+                            <div class=" col-12 col-xl-9 col-md-12 col-sm-12 ">
                                 <p class="font-bold ">Nữ</p>
                             </div>
                         </div>
@@ -101,7 +101,7 @@
                             <div class="col-12 col-xl-3 col-md-12 col-sm-12">
                                 <p>Email : </p>
                             </div>
-                            <div class="col-12 col-xl-9 col-md-12 col-sm-12 py-4  ">
+                            <div class="col-12 col-xl-9 col-md-12 col-sm-12 ">
                                 <p class="font-bold ">mybg2309@gmail.com</p>
                             </div>
                         </div>
@@ -109,7 +109,7 @@
                             <div class="col-12 col-xl-3 col-md-12 col-sm-12 ">
                                 <p>Địa chỉ : </p>
                             </div>
-                            <div class="col-12 col-xl-9 col-md-12 col-sm-12 py-4 ">
+                            <div class="col-12 col-xl-9 col-md-12 col-sm-12">
                                 <p class="font-bold ">Nguyễn Cơ Thạch - Nam Từ Niêm - Hà Nội</p>
                             </div>
                         </div>
@@ -117,7 +117,7 @@
                             <div class="col-12 col-xl-3 col-md-12 col-sm-12 ">
                                 <p>Học vấn : </p>
                             </div>
-                            <div class=" col-12 col-xl-9 col-md-12 col-sm-12 py-4 ">
+                            <div class=" col-12 col-xl-9 col-md-12 col-sm-12">
                                 <p class="font-bold ">Trường Cao Đẳng thực hàng FPT Polytechnic</p>
                             </div>
                         </div>
@@ -254,7 +254,7 @@
         </section>
         <section class="py-8" id="certificate">
             <div class="container text-center">
-                <div class="certificate text-center py-8 box-shadow  ">
+                <div class="certificate text-center py-8">
                     <h3>Giải thưởng</h3>
                     <img src="./img/marker.png" width="150px" alt="">
                     <p class="py-8"> 2020 : Sinh viên giỏi kỳ 4 </p>
@@ -262,7 +262,7 @@
 
             </div>
         </section>
-        <section class="my-8">
+        <section class="my-8" id="contact">
             <div class="contact-me ">
                 <div class="text-center pb-8">
                     <h3>Liên hệ với tôi </h3>
@@ -293,15 +293,17 @@
                         </div>
                         <div class="col-12 col-xl-6 col-md-12 col-sm-12 pt-8">
                             <div class="contact-content">
-                                <h6>Hãy nói về cách tôi có thể giúp bạn!</h6>
-                                <p class="py-4">Nếu bạn thích công việc của tôi và muốn tận dụng các dịch vụ của tôi thì hãy gửi tin nhắn cho tôi bằng cách sử dụng biểu mẫu liên hệ.</p>
-                                <p>Hoặc liên hệ bằng cách sử dụng email, skype hoặc số liên lạc của tôi.</p>
-                                <p class="py-4">See you !</p>
+                                <div class="contact-title">
+                                    <h6>Hãy nói về cách tôi có thể giúp bạn!</h6>
+                                    <p class="py-4">Nếu bạn thích công việc của tôi và muốn tận dụng các dịch vụ của tôi thì hãy gửi tin nhắn cho tôi bằng cách sử dụng biểu mẫu liên hệ.</p>
+                                    <p>Hoặc liên hệ bằng cách sử dụng email, skype hoặc số liên lạc của tôi.</p>
+                                    <p class="py-4">See you !</p>
+                                </div>
                                 <div class="row py-2">
-                                    <div class="col-12 col-xl-3 col-md-12 col-sm-12 ">
+                                    <div class="col-12 col-xl-3 col-md-12 col-sm-12">
                                         <p>Email : </p>
                                     </div>
-                                    <div class="col-12 col-xl-9 col-md-12 col-sm-12 py-4 ">
+                                    <div class="col-12 col-xl-9 col-md-12 col-sm-12 ">
                                         <p class="font-bold ">mybg2309@gmail.com</p>
                                     </div>
                                 </div>
@@ -309,7 +311,7 @@
                                     <div class="col-12 col-xl-3 col-md-12 col-sm-12">
                                         <p>Skype : </p>
                                     </div>
-                                    <div class="col-12 col-xl-9 col-md-12 col-sm-12 py-4">
+                                    <div class="col-12 col-xl-9 col-md-12 col-sm-12 ">
                                         <p class="font-bold ">live:.cid.1d9ab1de8871c2a7</p>
                                     </div>
                                 </div>
@@ -317,7 +319,7 @@
                                     <div class="col-12 col-xl-3 col-md-12 col-sm-12">
                                         <p>SĐT : </p>
                                     </div>
-                                    <div class="col-12 col-xl-9 col-md-12 col-sm-12 py-4">
+                                    <div class="col-12 col-xl-9 col-md-12 col-sm-12 ">
                                         <p class="font-bold ">0373415145</p>
                                     </div>
                                 </div>
