--- a/nguyen-thi-my/index.html
+++ b/nguyen-thi-my/index.html
@@ -29,12 +29,12 @@
         </div>
         <!-- Header mobile -->
         <div class="navbar-mobile flex d-lg-none relative justify-between ">
-            <div class="logo col-md-12 col-sm-12 ">
+            <div class="logo col-12 col-sm-12 ">
                 <h3>Super Folio</h3>
             </div>
             <input type="checkbox" hidden id="true">
             <label for="true" id="false"><i class="fas fa-bars fa-2x"></i></label>
-            <ul class="absolute col-md-12 col-sm-12">
+            <ul class="absolute col-12 col-sm-12">
                 <li><a href="#personal-information">Thông tin cá nhân</a></li>
                 <li><a href="#project">Dự án</a></li>
                 <li><a href="#skills">Kỹ năng chuyên môn</a></li>
@@ -47,12 +47,13 @@
         <!-- Header mobile -->
     </header>
     <main>
+        <!-- Banner -->
         <div class="banner">
             <div class="row">
-                <div class="image col-xl-6 col-md-12 col-sm-12 text-center">
+                <div class="image col-12 col-xl-6 col-sm-12 text-center">
                     <img src="./img/hello3.png" width="100%" alt="">
                 </div>
-                <div class="banner-content col-xl-6 col-md-12 col-sm-12 text-center">
+                <div class="banner-content col-12 col-xl-6 col-sm-12 text-center">
                     <p class="py-4">XIN CHÀO !</p>
                     <h3>Tôi là Nguyễn Thị Mỹ</h3>
                     <p class="py-4">TTS Front-end developer</p>
@@ -68,61 +69,64 @@
                 <img src="./img/bubble.png" alt="">
             </div>
         </div>
+        <!-- End Banner -->
         <aside class="wave-bg">
             <img src="./img/wave-bg.png" width="100%" alt="">
         </aside>
+        <!-- personal-information -->
         <section id="personal-information">
             <div class="container ">
                 <div class="row">
-                    <div class="personal-information col-12 col-xl-6 col-md-12 col-sm-12 ">
-                        <h3 class="py-8 text-center">Xin chào! Tôi là Nguyễn Thị Mỹ.</h3>
+                    <div class="personal-information col-12 col-xl-6 col-sm-12 line-height">
+                        <h3 class="text-center">Xin chào!</h3>
+                        <h3 class="py-4 text-center"> Tôi là Nguyễn Thị Mỹ.</h3>
                         <div class="pl-4">
                             - Trong 3 năm tới muốn học hỏi, khám phá được nhiều công nghệ mới để áp dụng vào những dự án của công ty - Tôi tin cùng sự đam mê và nỗ lực trong công việc, không ngừng học hỏi, tôi sẽ hoàn thành tốt công việc khi được trúng tuyển. LÀM VIỆC- CỐNG HIẾN-
                             TẬN TÂM LÀ NHỮNG TIÊU CHÍ HÀNG ĐẦU CỦA TÔI.
 
                         </div>
-                        <div class="row pt-4">
-                            <div class="col-12 col-xl-3 col-md-12 col-sm-12 pt-sm-2  ">
+                        <div class="row py-2 mt-4">
+                            <div class="col-12 col-xl-3 col-sm-12   ">
                                 <p>Sinh ngày : </p>
                             </div>
-                            <div class="col-12 col-xl-9 col-md-12 col-sm-12 ">
+                            <div class="col-12 col-xl-9 col-sm-12 ">
                                 <p class="font-bold ">23/09/2001 </p>
                             </div>
                         </div>
                         <div class="row py-2">
-                            <div class="col-12 col-xl-3 col-md-12 col-sm-12 ">
+                            <div class="col-12 col-xl-3 col-sm-12 ">
                                 <p>Giới tính :</p>
                             </div>
-                            <div class=" col-12 col-xl-9 col-md-12 col-sm-12 ">
+                            <div class=" col-12 col-xl-9 col-sm-12 ">
                                 <p class="font-bold ">Nữ</p>
                             </div>
                         </div>
                         <div class="row py-2">
-                            <div class="col-12 col-xl-3 col-md-12 col-sm-12">
+                            <div class="col-12 col-xl-3 col-sm-12">
                                 <p>Email : </p>
                             </div>
-                            <div class="col-12 col-xl-9 col-md-12 col-sm-12 ">
+                            <div class="col-12 col-xl-9 col-sm-12 ">
                                 <p class="font-bold ">mybg2309@gmail.com</p>
                             </div>
                         </div>
                         <div class="row py-2">
-                            <div class="col-12 col-xl-3 col-md-12 col-sm-12 ">
+                            <div class="col-12 col-xl-3 col-sm-12 ">
                                 <p>Địa chỉ : </p>
                             </div>
-                            <div class="col-12 col-xl-9 col-md-12 col-sm-12">
+                            <div class="col-12 col-xl-9 col-sm-12">
                                 <p class="font-bold ">Nguyễn Cơ Thạch - Nam Từ Niêm - Hà Nội</p>
                             </div>
                         </div>
                         <div class="row py-2">
-                            <div class="col-12 col-xl-3 col-md-12 col-sm-12 ">
+                            <div class="col-12 col-xl-3 col-sm-12 ">
                                 <p>Học vấn : </p>
                             </div>
-                            <div class=" col-12 col-xl-9 col-md-12 col-sm-12">
+                            <div class=" col-12 col-xl-9 col-sm-12">
                                 <p class="font-bold ">Trường Cao Đẳng thực hàng FPT Polytechnic</p>
                             </div>
                         </div>
                     </div>
-                    <div class="personal-information-image col-12 col-xl-6 col-md-12 col-sm-12 text-center py-8">
+                    <div class="personal-information-image col-12 col-xl-6 col-sm-12 text-center py-8">
                         <div class="card-personal">
                             <img src="./img/IMG_6070.JPG" width="100%" alt="">
                             <div class="detail-person">
@@ -136,14 +140,18 @@
                 </div>
             </div>
         </section>
-        <section class="my-8" id="project">
+        <!-- End personal-information  -->
+
+
+        <!-- Project -->
+        <section class="project mt-8" id="project">
             <div class="container">
                 <div class="title text-center">
                     <h3>Dự án </h3>
                     <img src="./img/marker.png" width="150px" alt="">
                 </div>
                 <div class="row py-8">
-                    <div class="col-xl-6 col-md-12 col-sm-12">
+                    <div class="col-12 col-xl-6 col-sm-12">
                         <div class="title-project flex justify-around">
                             <div class="py-4">
                                 <h6>Xây dựng website bán hoa</h6>
@@ -153,16 +161,16 @@
                                 <img src="./img/web-design.png" width="80x" alt="">
                             </div>
                         </div>
-                        <div class="py-4">
+                        <div class="py-4 line-height block">
                             <p>- Vai trò : Design giao diên, xây dựng các chức năng cho người dùng và thực hiện kiểm thử </p>
                             <p>- Xây dựng giao diện trang web bằng ngôn ngữ HTML5/CSS3, Boostrap </p>
                             <p>- Sử dụng Frameworks/Platforms: NodeJS, Webpack, Es6.</p>
                             <p>- Thực hiện kiểm thử website.</p>
-                            <p>- Project cá nhân : https://github.com/myfpt2001/ES6-NodeJs.</p>
+                            <p>- Project cá nhân : https://github.com/ES6-NodeJs.</p>
 
                         </div>
                     </div>
-                    <div class="col-xl-6 col-md-12 col-sm-12">
+                    <div class="col-12 col-xl-6 col-sm-12">
                         <div class="title-project flex justify-around">
                             <div class="py-4">
                                 <h6>Xây dựng website bán Quần áo</h6>
@@ -172,20 +180,24 @@
                                 <img src="./img/web-design.png" width="80px" alt="">
                             </div>
                         </div>
-                        <div class="py-4">
+                        <div class="py-4 block line-height">
                             <p>- Vị trí : Trưởng nhóm</p>
                             <p>- Phân công công việc, đôn đốc các thành viên</p>
                             <p>- Thiết kế website theo dạng Single Page Application.</p>
                             <p>- Làm việc với các kỹ thuật lập trình giao diên: HTML5/CSS3 , Bootstrap 5.</p>
                             <p>- Sử dụng Frameworks/Platforms: React Js,Webpack, Web API.</p>
-                            <p>- Project nhóm: https://github.com/myfpt2001/webreactjs-</p>
+                            <p>- Project nhóm: https://github.com/ebreactjs-</p>
 
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="skills" id="skills">
+        <!-- End project -->
+
+
+        <!-- Skills -->
+        <section class="skills mt-8" id="skills">
             <div class="container ">
                 <div class="skills-title text-center">
                     <h3>Kỹ năng chuyên môn</h3>
@@ -195,9 +207,9 @@
                 <div class="skill-content">
                     <div class="container">
                         <div class="row">
-                            <div class="col-12 col-xl-6 col-md-12 col-sm-12 px-4">
+                            <div class="col-12 col-xl-6 col-sm-12 px-4">
                                 <div class="flex justify-between ">
-                                    <p> HTML5/CSS3</p>
+                                    <p> HTML5</p>
                                     <p>60%</p>
                                 </div>
                                 <div class="evaluate">
@@ -221,7 +233,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-xl-6 col-md-12 col-sm-12 px-4">
+                            <div class="col-12 col-xl-6 col-sm-12 px-4">
                                 <div class="flex justify-between ">
                                     <p> ES6</p>
                                     <p>30%</p>
@@ -239,7 +251,7 @@
                                     </div>
                                 </div>
                                 <div class="flex justify-between ">
-                                    <p> HTML5/CSS3</p>
+                                    <p>CSS3</p>
                                     <p>60%</p>
                                 </div>
                                 <div class="evaluate">
@@ -252,7 +264,10 @@
                     </div>
                 </div>
         </section>
-        <section class="py-8" id="certificate">
+        <!-- End Skills  -->
+
+        <!-- certificate -->
+        <section class="mt-8" id="certificate">
             <div class="container text-center">
                 <div class="certificate text-center py-8">
                     <h3>Giải thưởng</h3>
@@ -262,7 +277,11 @@
 
             </div>
         </section>
-        <section class="my-8" id="contact">
+        <!--End certificate  -->
+
+
+        <!-- Contact -->
+        <section class="mt-8" id="contact">
             <div class="contact-me ">
                 <div class="text-center pb-8">
                     <h3>Liên hệ với tôi </h3>
@@ -270,7 +289,7 @@
                 </div>
                 <div class="container py-8">
                     <div class="row">
-                        <div class="col-12 col-xl-6 col-md-12 col-sm-12">
+                        <div class="col-12 col-xl-6 col-sm-12">
                             <form class="form-contact">
                                 <div class="form-control">
                                     <label for="">Name</label>
@@ -291,35 +310,35 @@
                             </form>
 
                         </div>
-                        <div class="col-12 col-xl-6 col-md-12 col-sm-12 pt-8">
+                        <div class="col-12 col-xl-6 col-sm-12 pt-8">
                             <div class="contact-content">
-                                <div class="contact-title">
+                                <div class="contact-title line-height">
                                     <h6>Hãy nói về cách tôi có thể giúp bạn!</h6>
-                                    <p class="py-4">Nếu bạn thích công việc của tôi và muốn tận dụng các dịch vụ của tôi thì hãy gửi tin nhắn cho tôi bằng cách sử dụng biểu mẫu liên hệ.</p>
+                                    <p>Nếu bạn thích công việc của tôi và muốn tận dụng các dịch vụ của tôi thì hãy gửi tin nhắn cho tôi bằng cách sử dụng biểu mẫu liên hệ.</p>
                                     <p>Hoặc liên hệ bằng cách sử dụng email, skype hoặc số liên lạc của tôi.</p>
-                                    <p class="py-4">See you !</p>
+                                    <p>See you !</p>
                                 </div>
                                 <div class="row py-2">
-                                    <div class="col-12 col-xl-3 col-md-12 col-sm-12">
+                                    <div class="col-12 col-xl-3 col-sm-12">
                                         <p>Email : </p>
                                     </div>
-                                    <div class="col-12 col-xl-9 col-md-12 col-sm-12 ">
+                                    <div class="col-12 col-xl-9 col-sm-12 ">
                                         <p class="font-bold ">mybg2309@gmail.com</p>
                                     </div>
                                 </div>
                                 <div class="row py-2">
-                                    <div class="col-12 col-xl-3 col-md-12 col-sm-12">
+                                    <div class="col-12 col-xl-3 col-sm-12">
                                         <p>Skype : </p>
                                     </div>
-                                    <div class="col-12 col-xl-9 col-md-12 col-sm-12 ">
+                                    <div class="col-12 col-xl-9 col-sm-12 ">
                                         <p class="font-bold ">live:.cid.1d9ab1de8871c2a7</p>
                                     </div>
                                 </div>
                                 <div class="row py-2">
-                                    <div class="col-12 col-xl-3 col-md-12 col-sm-12">
+                                    <div class="col-12 col-xl-3 col-sm-12">
                                         <p>SĐT : </p>
                                     </div>
-                                    <div class="col-12 col-xl-9 col-md-12 col-sm-12 ">
+                                    <div class="col-12 col-xl-9 col-sm-12 ">
                                         <p class="font-bold ">0373415145</p>
                                     </div>
                                 </div>
@@ -329,6 +348,7 @@
                 </div>
             </div>
         </section>
+        <!-- Contact -->
     </main>
     <footer>
         <div class="footer text-center">
