--- a/pham-ngoc-chien/index.html
+++ b/pham-ngoc-chien/index.html
@@ -47,27 +47,27 @@
         <!-- header mobile -->
         <input type="checkbox" hidden class="checked-show" id="show">
         <label for="show" class="header__menu-overlay fixed top-0 left-0 w-full h-full bg-black bg-opacity-40 hidden"></label>
-        <div class="header__menu fixed top-0 left-0 w-80 h-screen bg-green-500 transform -translate-x-full transition-transform duration-300 ease-linear">
+        <div class="header__menu fixed top-0 left-0 bottom-0 w-80 h-screen bg-green-500 transform -translate-x-full transition-transform duration-300 ease-linear">
             <label class="header__menu-closed absolute right-3 text-5xl" for="show">
                 <i class="fas fa-times"></i>
             </label>
             <ul class="header__menu-list text-3xl mt-20">
-                <li class="header__menu-item p-8 bb">
+                <li class="header__menu-item p-3 bb">
                     <a href="#about">ABOUT</a>
                 </li>
-                <li class="header__menu-item p-8 bb">
+                <li class="header__menu-item p-3 bb">
                     <a href="#skill">SKILL</a>
                 </li>
-                <li class="header__menu-item p-8 bb">
+                <li class="header__menu-item p-3 bb">
                     <a href="#project">PROJECT</a>
                 </li>
-                <li class="header__menu-item p-8 bb">
+                <li class="header__menu-item p-3 bb">
                     <a href="#education">EDUCATION</a>
                 </li>
-                <li class="header__menu-item p-8 bb">
+                <li class="header__menu-item p-3 bb">
                     <a href="#experience">EXPERIENCE</a>
                 </li>
-                <li class="header__menu-item p-8 bb">
+                <li class="header__menu-item p-3 bb">
                     <a href="#contract">CONTRACT</a>
                 </li>
             </ul>
@@ -107,7 +107,7 @@
                 </a>
             </div>
         </section>
-        <div class="container mr-auto ml-auto xl:px-48 lg:px-10 md:px-10 sm:px-3 mt-32">
+        <div class="ib container mr-auto ml-auto xl:px-48 lg:px-10 md:px-10 sm:px-3 mt-32">
             <section class="container__about-detail mt-28 mx-2">
                 <div class="">
                     <div class="xl:flex border">
@@ -126,7 +126,7 @@
                             </div>
                             <div class="flex items-center">
                                 <div class="xl:text-xl xl:w-1/5 sm:w-2/5 m-3">Email: </div>
-                                <div class="xl:text-xl">phamngocchien.2308@gmail.com</div>
+                                <div class="xl:text-xl">phamngocchien.2308 @gmail.com</div>
                             </div>
                             <div class="flex items-center">
                                 <div class="xl:text-xl xl:w-1/5 sm:w-2/5 m-3">Phone: </div>
@@ -293,7 +293,7 @@
                 <div>
                     <div class="flex items-center mb-5 ">
                         <div class="far fa-envelope w-24 h-24 text-5xl text-center p-5 text-gray-100 bg-green-400 rounded "></div>
-                        <p class="xl:text-xl sm-ml xl:ml-14 md:ml-12 lg:ml-14 sm:text-xs lg:text-2xl md:text-xl ">phamngocchien.2308@gmail.com</p>
+                        <p class="xl:text-xl sm-ml xl:ml-14 md:ml-12 lg:ml-14 sm:text-xs lg:text-2xl md:text-xl ">phamngocchien.2308 @gmail.com</p>
                     </div>
                     <div class="flex items-center mb-5 ">
                         <div class="fas fa-map-marker-alt w-24 h-24 text-5xl text-center p-5 text-gray-100 bg-green-400 rounded"></div>
