[tuandv1]: fix after review

--- a/html-css/doan-viet-tuan/index.html
+++ b/html-css/doan-viet-tuan/index.html
@@ -11,19 +11,16 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="./assets/css/style.css" rel="stylesheet" />
   <link href="./assets/css/reponsive.css" rel="stylesheet" />
-
 </head>
 
 <body>
   <div class="container">
-
     <header class="w-100">
-      <nav class=" nav-mobie w-100">
+      <nav class=" nav-mobile w-100">
         <ul class="d-flex justify-content-space-a m0-auto w-100 ">
           <li class="p-1 hover ">
             <a href="#home" class="white ">
               <i class="fa-solid fa-house pr-1 "></i>
-
             </a>
           </li>
           <li class="p-1 hover ">
@@ -50,7 +47,6 @@
       </nav>
       <div class="header-md d-flex flex-colum ">
         <img src="./assets/image/avatar1.jpg" class="avatar w-50 border-circle" alt="avatar1" />
-
         <nav class="h-100 w-100">
           <ul class="d-flex flex-colum ">
             <li class="p-1 hover mb-3 ">
@@ -70,7 +66,6 @@
                 <i class="fa-solid fa-book-bookmark pr-1"></i>
                 <span>Knowledge</span>
               </a>
-
             </li>
             <li class="p-1 hover mb-3">
               <a href="#interst" class="text-light">
@@ -83,28 +78,26 @@
       </div>
     </header>
     <main>
-      <section id="home">
+      <section id="home" class="home">
         <div class="d-flex flex-colum align-items-center">
-
           <div class="d-flex flex-colum text-center">
             <h2 class="color-primary">Hi There</h2>
             <h1 class="white">Welcome to my portfolio</h1>
             <h5 class="white pb-4">Front-End Developer </h5>
-
           </div>
           <div class="w-50 w-25-md pb-2">
             <img src="./assets/image/avatar1.jpg" class="  w-100  obj-fit-cover border-circle" alt="avatar1" />
           </div>
         </div>
-
         <a href="#about" class="clickme">
           Click
         </a>
       </section>
-      <section id="about" class="h-full pt-5">
+      <section id="about" class="h-full pt-5" class="about">
         <h2 class="color-primary text-center ">About Me</h2>
         <article class="pt-2  text-centrer-md text-justify ">
-          <p class="text-light w-75 text-center m0-auto">With logical thinking skills & a creative mindset, I want to become one of the key
+          <p class="text-light w-75 text-center m0-auto">With logical thinking skills & a creative mindset, I want to
+            become one of the key
             members who bring an
             effective IT solution to the customers. At the same time, I want to improve my knowledge through your
             professional working environment.</p>
@@ -123,7 +116,6 @@
             <span class="field">Age:</span>
             31
           </article>
-
           <article class="pt-1 pb-1 w-50-md pl-10-md">
             <span class="field">Phone:</span>
             0965xxx034
@@ -137,9 +129,8 @@
             Nam Dinh
           </article>
         </div>
-
       </section>
-      <section id="knowledge" class="pt-5">
+      <section id="knowledge" class="pt-5 knowledge">
         <h2 class="color-primary text-center mb-4">My Knowledge</h2>
         <div class="">
           <div class="mb-3">
@@ -193,41 +184,33 @@
           </div>
         </div>
       </section>
-      <section id="favourite" class="pt-5 mb-3">
+      <section id="favourite" class="pt-5 mb-3 favourite">
         <h2 class="color-primary text-center">My Favourite</h2>
         <div
           class="d-flex flex-colum flex-row-md w-100  white pt-4 flex-wrap-md justify-content-around-md align-items-center-md ">
           <article class="pt-1 pb-1 w-50-md pl-10-md">
             <span class="field">Play game</span>
-
           </article>
           <article class="pt-1 pb-1 w-50-md pl-10-md">
             <span class="field">Go Camping</span>
-
           </article>
           <article class="pt-1 pb-1 w-50-md pl-10-md">
             <span class="field">Listen to music </span>
-
           </article>
-
           <article class="pt-1 pb-1 w-50-md pl-10-md">
             <span class="field">Foosball</span>
-
           </article>
           <article class="pt-1 pb-1 w-50-md pl-10-md">
             <span class="field">Read books</span>
-
           </article>
           <article class="pt-1 pb-1 w-50-md pl-10-md">
             <span class="field">Go to the pub</span>
-
           </article>
         </div>
       </section>
-
     </main>
     <footer>
-      <div class="poition-fix bottom-3 right-3 d-flex bg-primary border-circle">
+      <div class="position-fixed bottom-3 right-3 d-flex bg-primary border-circle">
         <a href="#home" class="white ">
           <i class="fa-solid fa-arrow-up"></i>
         </a>
